# Tony-Claude-Code-Skills

./: .gitignore  NOTICE.md  README.md  install.sh  settings.json
config/: settings.json
config/hooks/: sync-skills-to-github.sh
config/mcp-servers/: README.md
mcp-servers/: README.md
my-config/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  statusline-command.sh
my-config/commands/: history.md
my-config/hooks/: auth-preflight.sh  env-guard.sh  log-rotate.sh  read-cache-invalidate.sh  read-cache.sh  secret-scan.sh  sync-skills-to-github.sh  update-projects-readme.sh
my-config/output-styles/: terse.md
my-config/rules/: cli-tools.md  design-systems.md  gbrain-routing.md  git-workflow.md  gstack-routing.md  intent-defaults.md  multi-claude-cache.md  opc-methodology.md  project-conventions.md  secrets-firewall.md  session-resilience.md  smux-bridge.md  (+2 more)
skills/: .bash_profile  .bashrc  .chezmoiignore.tmpl  .cursorrules  .prettierignore  .setup_osx_defaults  .viminfo  Brewfile  CHANGELOG.md  CHEZMOI_SETUP.md  CLAUDE.md  do  dot_bash_profile  dot_bashrc  dot_gitconfig  dot_ideavimrc  dot_ignore  dot_profile  dot_ripgreprc  dotfiles.code-workspace  install.sh  make-plan  mama  mem-search  p10  p7  p9  pro  pua  pua-en  pua-ja  pua-loop  shot  smart-explore  smux  timeline-report  web-access  yes
skills/rghamilton3-dotfiles/dot_claude/skills/rp2350-c-cpp/assets/project_template/: CMakeLists.txt  README.md
skills/rghamilton3-dotfiles/dot_claude/skills/rp2350-c-cpp/assets/project_template/src/: main.c
tools/: config-sync.sh  generate-readme.js  skill-sync.sh
(+901 files in other folders)
